--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Job Application Form</h1>
-    <form action="#" method="post">
+    <form  method="post">
         <label for="name">Name*</label>
         <input type="text" id="name" name="name" required><br><br>
 
