--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
         <label for="portfolio">Portfolio URL</label>
         <input type="url" id="portfolio" name="portfolio"><br><br>
 
-        <botton type="submit" value="Submit">Submit</botton>
+        <button type="submit" value="Submit">Submit</button>
     </form>
     <script type="text/javascript" src="./script.js">
 </script>
